design changes for mobile view

--- a/src/main/resources/templates/fragments/menuheader.html
+++ b/src/main/resources/templates/fragments/menuheader.html
@@ -20,6 +20,12 @@
 			<li class="nav-item">
 				<a class="nav-link text-light font-weight-bold px-3" th:href="@{'/movie/persons'}">PERSONS</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link text-light font-weight-bold px-3" th:href="@{'/movie/popular'}">POPULAR</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link text-light font-weight-bold px-3" th:href="@{'/movie/rooms'}">ROOMS</a>
+			</li>
 		</ul>
 	</div>
 </nav>
