--- a/src/main/resources/templates/view/popcron/allmovies.html
+++ b/src/main/resources/templates/view/popcron/allmovies.html
@@ -8,13 +8,16 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 <link rel="stylesheet" th:href="@{/css/custom.css}" />
+<link rel="stylesheet" th:href="@{/css/main.css}" />
 
 </head>
 <body>
 	<nav th:replace="fragments/menuheader :: menuheader"></nav>
-	<div class="container-fluid" style="margin-top: 70px;">
+	<div class="container-fluid">
 		<div th:replace="fragments/searchmenu :: searchmenu"></div>
+		<div class="rowtop">
 		<div id="appenddata"></div>
+		</div>
 	</div>
 </body>
 
