--- a/src/main/resources/templates/view/popcron/appendmovies.html
+++ b/src/main/resources/templates/view/popcron/appendmovies.html
@@ -1,4 +1,4 @@
-<div class="row" style="margin-top: 20px;">
+<div class="row">
 	<div class="col-md-4 well" th:each="movie : ${movies}">
 		<a th:href="@{'/showmovie?movieId='+${movie.imdb_id}}" style="text-decoration: none;">
 			<div class="card">
