--- a/src/main/resources/templates/view/popcron/movies.html
+++ b/src/main/resources/templates/view/popcron/movies.html
@@ -1,82 +1,25 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>SignIn - All Sports Fantasy</title>
-<link rel="stylesheet"
-	href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
-<style type="text/css">
-.col-md-4 {
-	margin-bottom: 15px;
-}
-
-.card-body {
-	background: #234238;
-	color: #fff;
-	text-align: center;
-}
-
-.card-body:hover {
-	background: #1abf8a;
-	color: #fff;
-	text-align: center;
-}
-</style>
+<title>Movies - All Sports Fantasy</title>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
+<link rel="stylesheet" th:href="@{/css/custom.css}" />
+<link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
-	<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
-		<a class="navbar-brand"><img
-			src="https://blog.eduonix.com/wp-content/uploads/2018/12/eduonix-logo.png"></a>
-		<button type="button" class="navbar-toggler bg-light"
-			data-toggle="collapse" data-target="#nav">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse justify-content-between" id="nav">
-			<ul class="navbar-nav">
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/movies'}">ENGLISH</a></li>
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/movierooms'}">MOVIE ROOMS</a></li>
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/genres'}">GENRES</a></li>
-				<!-- <li class="nav-item dropdown" data-toggle="dropdown"><a
-					class="nav-link text-light font-weight-bold px-3 dropdown-toggle"
-					href="#">GENRES</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Fast Food</a> <a
-							class="dropdown-item" href="#">Lunch</a> <a class="dropdown-item"
-							href="#">Dessert</a>
-					</div></li> -->
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/popular'}">POPULAR MOVIES</a></li>
-
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3" th:href="@{'/moviesbylanguage?language=te'}">Telugu</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-	<div class="container-fluid" style="margin-top: 70px;">
-		<div class="row" style="margin-top: 20px;">
+	<nav th:replace="fragments/menuheader :: menuheader"></nav>
+	<div class="container-fluid">
+	<div th:replace="fragments/searchmenu :: searchmenu"></div>
+		<div class="row rowtop">
 			<div class="col-md-4" th:each="movie : ${movies}">
 				<div class="card">
-					<img th:src="${movie.images.fanart}" class="card-img-top" alt="..."
-						height="20%"> <a
-						th:href="@{'/showmovie?movieId='+${movie.imdb_id}}"
-						style="text-decoration: none;">
+					<img th:src="${movie.images.fanart!=null and movie.images.fanart!='' and movie.images.fanart!=undefined and movie.images.fanart!='images/posterholder.png'?movie.images.fanart:'http://www.reelviews.net/resources/img/default_poster.jpg'}" class="card-img-top" alt="..." height="234px;"> 
+					<a th:href="@{'/showmovie?movieId='+${movie.imdb_id}}" style="text-decoration: none;">
 						<div class="card-body">
-							<h5 class="card-title"
-								th:text="${#strings.length(movie.title)>25 ? #strings.substring(movie.title,0,25) + '...' : movie.title}">Movie
-								Title</h5>
+							<h5 class="card-title" th:text="${movie.title}">Movie Title</h5>
 						</div>
 					</a>
 				</div>
@@ -85,6 +28,5 @@
 	</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 </html>
