--- a/src/main/resources/templates/view/popcron/showmovie.html
+++ b/src/main/resources/templates/view/popcron/showmovie.html
@@ -1,148 +1,79 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>SignIn - All Sports Fantasy</title>
-<link rel="stylesheet"
-	href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
+<title>Show Movie - All Sports Fantasy</title>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
 <link rel="stylesheet" th:href="@{/lity/lity.css}" />
-
-<style type="text/css">
-.col-md-4 {
-	margin-bottom: 15px;
-}
-
-.card-body {
-	background: #234238;
-	color: #fff;
-	text-align: center;
-}
-
-.card-body:hover {
-	background: #1abf8a;
-	color: #fff;
-	text-align: center;
-}
-</style>
+<link rel="stylesheet" th:href="@{/css/custom.css}" />
+<link rel="stylesheet" th:href="@{/css/main.css}" />
 </head>
 <body>
-<nav class="navbar navbar-expand-md navbar-light bg-dark fixed-top">
-		<a class="navbar-brand"><img
-			src="https://blog.eduonix.com/wp-content/uploads/2018/12/eduonix-logo.png"></a>
-		<button type="button" class="navbar-toggler bg-light"
-			data-toggle="collapse" data-target="#nav">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-
-		<div class="collapse navbar-collapse justify-content-between" id="nav">
-			<ul class="navbar-nav">
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/movies'}">ENGLISH</a></li>
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/movierooms'}">MOVIE ROOMS</a></li>
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/genres'}">GENRES</a></li>
-				<!-- <li class="nav-item dropdown" data-toggle="dropdown"><a
-					class="nav-link text-light font-weight-bold px-3 dropdown-toggle"
-					href="#">GENRES</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Fast Food</a> <a
-							class="dropdown-item" href="#">Lunch</a> <a class="dropdown-item"
-							href="#">Dessert</a>
-					</div></li> -->
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/popular'}">POPULAR MOVIES</a></li>
-
-				<li class="nav-item"><a
-					class="nav-link text-light font-weight-bold px-3"
-					th:href="@{'/moviesbylanguage?language=te'}">TELUGU</a></li>
-			</ul>
-		</div>
-	</nav>
-
-	<div class="container-fluid" style="margin-top: 70px;">
-		<div class="row" style="margin-top: 20px;">
-			<div class="col-md-4">
-				<div class="card" style="position: fixed;height:calc(100vh - 76px);border-radius: 1%;width:32%;">
-					<img th:src="${movie.images.poster}" class="card-img-top" alt="..." style="height: 100%;border-radius: 1%;"> <a
-						th:href="@{'/showmovie?movieId='+${movie.imdb_id}}"
-						style="text-decoration: none;"> </a>
-				</div>
+<nav th:replace="fragments/menuheader :: menuheader"></nav>
+<div class="container-fluid">
+<div th:replace="fragments/searchmenu :: searchmenu"></div>
+	<div class="row rowtop">
+		<div class="col-md-4">
+			<div class="card fixedposition">
+				<img th:src="${movie.images.poster}" class="card-img-top" alt="..." style="height: 100%;border-radius: 1%;"> 
 			</div>
-			<div class="col-md-8">
-				<table class="table table-striped">
-					<tbody>
-						<tr>
-							<th>Title</th>
-							<td th:text="${movie.title}"></td>
-						</tr>
-						<tr>
-							<th colspan="2">Description</th>
-						</tr>
-						<tr>
-							<td colspan="2"
-								th:text="${movie.synopsis}"></td>
-						</tr>
-						<tr>
-							<th>Year</th>
-							<td th:text="${movie.year}"></td>
-						</tr>
-						<tr>
-							<th>Duration</th>
-							<td th:text="${movie.runtime + ' Mints'}"></td>
-						</tr>
-						<tr>
-							<th>certification</th>
-							<td th:text="${movie.certification}"></td>
-						</tr>
-						<tr>
-							<th>Genres</th>
-							<td th:text="${#strings.listJoin(movie.genres,', ')}"></td>
-						</tr>
-						<tr>
-							<th>Percentage</th>
-							<td th:text="${movie.rating.percentage+ '%'}"></td>
-						</tr>
-						<tr>
-							<th>Votes</th>
-							<td th:text="${movie.rating.votes}"></td>
-						</tr>
-						<tr>
-							<th>Likes</th>
-							<td th:text="${movie.rating.loved}"></td>
-						</tr>
-						<tr>
-							<th>Dislikes</th>
-							<td th:text="${movie.rating.hated}"></td>
-						</tr>
-
-					</tbody>
-				</table>
-				<div style="margin-top: 10px; margin-bottom: 20px;">
-					<a class="btn btn-success playmovie">Watch Movie</a> <a
-						class="btn btn-danger" th:href="${movie.trailer}" data-lity>Watch
-						Trailer</a>
-				</div>
+		</div>
+		<div class="col-md-8">
+			<table class="table table-striped">
+				<tbody>
+					<tr>
+						<th>Title</th>
+						<td th:text="${movie.title}"></td>
+					</tr>
+					<tr>
+						<th colspan="2">Description</th>
+					</tr>
+					<tr>
+						<td colspan="2"
+							th:text="${movie.synopsis}"></td>
+					</tr>
+					<tr>
+						<th>Year</th>
+						<td th:text="${movie.year}"></td>
+					</tr>
+					<tr>
+						<th>Duration</th>
+						<td th:text="${movie.runtime + ' Mints'}"></td>
+					</tr>
+					<tr>
+						<th>certification</th>
+						<td th:text="${movie.certification}"></td>
+					</tr>
+					<tr>
+						<th>Genres</th>
+						<td th:text="${#strings.listJoin(movie.genres,', ')}"></td>
+					</tr>
+					<tr>
+						<th>Percentage</th>
+						<td th:text="${movie.rating.percentage+ '%'}"></td>
+					</tr>
+					<tr>
+						<th>Votes</th>
+						<td th:text="${movie.rating.votes}"></td>
+					</tr>
+				</tbody>
+			</table><br/><br/>
+			<div class="footer">
+			<div style="margin-left: 20px;">
+				<a class="btn btn-success playmovie">Watch Movie</a> 
+				<a class="btn btn-danger" th:href="${movie.trailer}" data-lity>Watch Trailer</a>
+			</div>
 			</div>
 		</div>
 	</div>
+</div>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 <script th:src="@{/lity/lity.js}"></script>
-
-
 
 <script type="text/javascript" th:inline="javascript">
 	var ipAddress = "";
@@ -151,12 +82,11 @@
 	$(function() {
 		$.get("https://ipapi.co/json/", function(response) {
 			ipAddress = response.ip;
-			console.log(ipAddress);
 		});
 	});	
 	
 	$(".playmovie").on("click", function() {
-		window.location.href="/playmovie?movieId="+movieId+"&address="+ipAddress;
+		window.location.href="/playmovie?movieId=" + movieId + "&address=" + ipAddress;
 	});	
 </script>
 </html>
