--- a/src/main/resources/templates/view/popcron/showmovie.html
+++ b/src/main/resources/templates/view/popcron/showmovie.html
@@ -81,6 +81,7 @@
 	
 	$(function() {
 		$.get("https://ipapi.co/json/", function(response) {
+			console.log(response);
 			ipAddress = response.ip;
 		});
 	});	
