--- a/src/main/resources/templates/view/popcron/showmovie.html
+++ b/src/main/resources/templates/view/popcron/showmovie.html
@@ -43,7 +43,7 @@
 						<td th:text="${movie.runtime + ' Mints'}"></td>
 					</tr>
 					<tr>
-						<th>certification</th>
+						<th>Certification</th>
 						<td th:text="${movie.certification}"></td>
 					</tr>
 					<tr>
