new movies added

--- a/src/main/resources/templates/fragments/menuheader.html
+++ b/src/main/resources/templates/fragments/menuheader.html
@@ -26,6 +26,9 @@
 			<li class="nav-item">
 				<a class="nav-link text-light font-weight-bold px-3" th:href="@{'/movie/rooms'}">ROOMS</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link text-light font-weight-bold px-3" th:href="@{'/movie/others'}">OTHERS</a>
+			</li>
 		</ul>
 	</div>
 </nav>
