new movies added

--- a/src/main/resources/templates/fragments/menuheader.html
+++ b/src/main/resources/templates/fragments/menuheader.html
@@ -29,6 +29,9 @@
 			<li class="nav-item">
 				<a class="nav-link text-light font-weight-bold px-3" th:href="@{'/movie/others'}">OTHERS</a>
 			</li>
+			<li class="nav-item">
+				<a class="nav-link text-light font-weight-bold px-3" th:href="@{'/movie/zero'}">A-Z</a>
+			</li>
 		</ul>
 	</div>
 </nav>
