new css changes

--- a/src/main/resources/templates/view/az/allmovies.html
+++ b/src/main/resources/templates/view/az/allmovies.html
@@ -45,59 +45,59 @@
 		<div class="rowtop" style="margin-top: 70px;">
 			<div class="ml-alphabet">
 				<div class="movies-letter">
-					<a class="btn btn-letter "
+					<a th:class="${movietype == 'zero'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/zero'}">0-9</a> <a
-						class="btn btn-letter"
+						 th:class="${movietype == 'A'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/A'}">A</a><a
-						class="btn btn-letter"
+						 th:class="${movietype == 'B'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/B'}">B</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'C'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/C'}">C</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'D'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/D'}">D</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'E'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/E'}">E</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'F'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/F'}">F</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'G'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/G'}">G</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'H'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/H'}">H</a><a
-						class="btn btn-letter active"
+						th:class="${movietype == 'I'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/I'}">I</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'J'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/J'}">J</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'K'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/K'}">K</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'L'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/L'}">L</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'M'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/M'}">M</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'N'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/N'}">N</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'O'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/O'}">O</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'P'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/P'}">P</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'Q'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/Q'}">Q</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'R'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/R'}">R</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'S'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/S'}">S</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'T'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/T'}">T</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'U'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/U'}">U</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'V'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/V'}">V</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'W'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/W'}">W</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'X'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/X'}">X</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'Y'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/Y'}">Y</a><a
-						class="btn btn-letter"
+						th:class="${movietype == 'Z'} ? 'btn btn-letter active' : 'btn btn-letter'"
 						th:href="${'/movie/Z'}">Z</a>
 					<div class="clearfix"></div>
 				</div>
